# readd

./: .gitignore  README.md  build.ts  dev.ts  drizzle.config.ts  migrate.ts  package.json
docs/plans/: 20260302-base-app-elysia-sveltekit.md  20260318-readd-features.md
drizzle/: 0000_lame_human_cannonball.sql  0001_careful_freak.sql  0002_glorious_pepper_potts.sql  0003_odd_raider.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  _journal.json
server/: Cargo.toml
server/migrations/: 0001_init.sql  0002_finished_at.sql  0003_text_books.sql  0004_tts_jobs.sql  0005_tts_chunk_meta.sql
server/src/: auth.rs  db.rs  epub.rs  error.rs  main.rs  state.rs  tts_worker.rs
server/src/routes/: auth.rs  books.rs  library.rs  mod.rs  progress.rs  stats.rs  text_books.rs  tts.rs
src/: index.ts  logger.ts
src/db/: index.ts  schema.ts
src/frontend/: README.md  index.html  package.json  svelte.config.js  tsconfig.json  vite.config.ts
src/frontend/src/: App.vue  api.ts  main.ts
src/frontend/src/components/: Confirm.vue  Player.vue  Toasts.vue
src/frontend/src/lib/: Confirm.svelte  Player.svelte  Toasts.svelte  api.ts  auth.svelte.ts  playerState.svelte.ts  toast.svelte.ts
src/frontend/src/router/: index.ts
src/frontend/src/routes/: +layout.svelte  +page.svelte
src/frontend/src/routes/book/[id]/: +page.svelte
src/frontend/src/routes/explore/: +page.svelte
src/frontend/src/routes/login/: +page.svelte
src/frontend/src/stores/: auth.ts  player.ts  toasts.ts
src/frontend/src/views/: BookView.vue  ExploreView.vue  LibraryView.vue  LoginView.vue  StatsView.vue  TextBooksView.vue
src/frontend/static/.well-known/appspecific/: com.chrome.devtools.json
src/middleware/: auth.ts
src/routes/: auth.ts  books.ts  library.ts  progress.ts  stats.ts
