[package]
name = "readd-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
libsqlite3-sys = { version = "0.28", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
tower-http = { version = "0.5", features = ["cors", "fs"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio-util = { version = "0.7", features = ["io"] }
symphonia = { version = "0.5", features = ["mp3", "aac", "ogg", "flac", "wav", "isomp4"] }
wyhash = "0.6"
futures-util = "0.3"
mime_guess = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
