[package]
name = "readd-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
tokio = { version = "1.51.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
# libsqlite3-sys = { version = "0.36.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"], default-features = false }
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tokio-util = { version = "0.7", features = ["io"] }
symphonia = { version = "0.5.5", features = ["mp3", "aac", "ogg", "flac", "wav", "isomp4"] }
wyhash = "0.6"
futures-util = "0.3"
mime_guess = "2"
reqwest = { version = "0.13.2", features = ["json"] }
zip = "8.5.1"
tower = { version = "0.5.3", features = ["util"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
